# piper-phonemize

./: CMakeLists.txt  MANIFEST.in  pyproject.toml
.github/workflows/: main.yml  test.yml  wheels.yml
piper_phonemize/: __init__.py  piper_phonemize_cpp.pyi
src/: main.cpp
