[build-system]
requires = ["scikit-build-core>=0.4.0", "pybind11>=2.10.0"]
build-backend = "scikit_build_core.build"

[project]
name = "piper_phonemize"
version = "1.1.0"
description = "Phonemization libary used by Piper text to speech system"
authors = [{ name = "Michael Hansen", email = "mike@rhasspy.org" }]
requires-python = ">=3.7"
readme = "README.md"
license = { file = "LICENSE.md" }

[tool.scikit-build]
wheel.packages = ["piper_phonemize"]
cmake.version = ">=3.14"
build.verbose = true
sdist.include = [
    "piper_phonemize/**/*",
    "src/**/*",
    "etc/**/*",
    "README.md",
    "LICENSE.md",
    "CMakeLists.txt",
    "Makefile",
]
